--- a/src/app/components/form-silabo/form-silabo.component.html
+++ b/src/app/components/form-silabo/form-silabo.component.html
@@ -117,7 +117,7 @@
                 <td>correo del docente</td>
                 <td>
                   <button class="btn btn-sm btn-danger mx-1">
-                    <fa-icon [icon]="faTrashAlt"></fa-icon>
+                    <!-- <fa-icon [icon]="faTrashAlt"></fa-icon> -->X
                   </button>
                 </td>
               </tr>
