chore: hide login button

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
           <a class="nav-link" routerLink="/silabos">Silabos</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-success" routerLink="/" *ngIf="!login"> Login </a>
+          <!-- <a class="btn btn-success" routerLink="/" *ngIf="!login"> Login </a> -->
           <button class="btn btn-danger" *ngIf="login" (click)="logout()">
             Logout
           </button>
