chore: change new course form

--- a/src/app/components/form-silabo/form-silabo.component.html
+++ b/src/app/components/form-silabo/form-silabo.component.html
@@ -72,6 +72,7 @@
       formControlName="creditos"
     >
       <option value="">Seleccione</option>
+      <option value="2">2 Créditos</option>
       <option value="3">3 Créditos</option>
       <option value="4">4 Créditos</option>
     </select>
