--- a/src/app/components/new-course/new-course.component.html
+++ b/src/app/components/new-course/new-course.component.html
@@ -62,6 +62,7 @@
       formControlName="creditos"
     >
       <option value="" hidden>Seleccione</option>
+      <option value="2">2 Créditos</option>
       <option value="3">3 Créditos</option>
       <option value="4">4 Créditos</option>
     </select>
@@ -79,7 +80,7 @@
     <label for="sumilla_id">Sumilla</label>
     <textarea
       id="sumilla_id"
-      rows="4"
+      rows="3"
       class="form-control mt-2"
       formControlName="sumilla"
     ></textarea>
@@ -88,12 +89,12 @@
     <label for="estrategia_id">Estrategia didáctica</label>
     <textarea
       id="estrategia_id"
-      rows="4"
+      rows="3"
       class="form-control mt-2"
       formControlName="estrategia"
     ></textarea>
   </div>
-  <div class="col-12 mt-2">Competencias Especificas</div>
+  <!-- <div class="col-12 mt-2">Competencias Especificas</div>
   <div class="col-12 my-2">
     <div class="card">
       <div class="row m-4">
@@ -135,9 +136,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="col-12 my-4 d-flex flex-row-reverse">
+  <div class="col-12 my-3 d-flex flex-row-reverse">
     <button class="btn btn-primary px-5" (click)="saveCourse()">Guardar</button>
   </div>
 </div>
