refactor!: Reestructuración del proyecto por modulos

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
     <div class="navbar-collapse collapse" id="navbarResponsive">
       <ul class="navbar-nav ms-md-auto">
         <li class="nav-item mx-3" *ngIf="login">
-          <a class="nav-link" routerLink="/silabos">Silabos</a>
+          <a class="nav-link" routerLink="/silabo">Silabos</a>
         </li>
         <li class="nav-item">
           <!-- <a class="btn btn-success" routerLink="/" *ngIf="!login"> Login </a> -->
