--- a/src/app/silabo/pages/silabo/silabo.component.html
+++ b/src/app/silabo/pages/silabo/silabo.component.html
@@ -6,7 +6,7 @@
       <fa-icon [icon]="faChevronLeft"></fa-icon>
     </button>
     <span class="h3 m-0 px-3">
-      Creando nuevo {{ isSelected ? "Silabo" : "Curso" }}
+      Nuevo {{ isSelected ? "Silabo" : "Curso" }}
     </span>
   </div>
 
