--- a/src/styles.css
+++ b/src/styles.css
@@ -4,9 +4,9 @@ body {
   height: 100vh;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 7px;
 }
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: #4582EC;
 }
