--- a/src/app/silabo/components/card-silabos-list/card-silabos-list.component.html
+++ b/src/app/silabo/components/card-silabos-list/card-silabos-list.component.html
@@ -1,16 +1,8 @@
 <div
-  class="
-    card
-    d-flex
-    flex-row
-    justify-content-between
-    p-3
-    my-2
-    align-items-center
-  "
+  class="card d-flex flex-row justify-content-between p-3 my-2 align-items-center"
 >
   <ng-container>
-    <span class="h5">{{ silabo?.asig_nombre }}</span>
+    <span class="h5">{{ silabo?.curso.asig_nombre }}</span>
   </ng-container>
   <span>
     <button
