--- a/src/app/silabo/components/new-unidad/new-unidad.component.html
+++ b/src/app/silabo/components/new-unidad/new-unidad.component.html
@@ -34,7 +34,7 @@
         >
           <option [ngValue]="" hidden>Seleccione</option>
           <option *ngFor="let c of capacidades" [ngValue]="c">
-            {{ c?.nombre }}
+            {{ c?.capacidad_nombre }}
           </option>
         </select>
       </div>
