--- a/src/app/silabo/components/reference/reference.component.html
+++ b/src/app/silabo/components/reference/reference.component.html
@@ -71,6 +71,10 @@
           formControlName="autores"
         />
       </div>
+      <small class="text-muted"
+        >Inserte el nombre y apellido separado por un ';' Ej. Nombre Apellido;
+        Nombre2 Apellido2</small
+      >
     </div>
   </div>
 </div>
