--- a/src/app/silabo/components/header-silabo/header-silabo.component.html
+++ b/src/app/silabo/components/header-silabo/header-silabo.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-8">
-    <span class="h3">{{ silabo?.asig_nombre }}</span>
+    <span class="h3">{{ silabo?.curso?.asig_nombre }}</span>
     <hr class="mt-2 mb-1" />
-    <small>Actualizado el 23/08/2021</small>
+    <small>Actualizado el {{ silabo.updated_at | date: "short" }}</small>
   </div>
   <div
     class="col-md-4 d-flex align-items-start justify-content-end mt-3 mt-md-0"
