--- a/src/app/silabo/pages/home-silabos/home-silabos.component.html
+++ b/src/app/silabo/pages/home-silabos/home-silabos.component.html
@@ -114,7 +114,10 @@
         <app-card-silabos-list [silabo]="silabo"></app-card-silabos-list>
       </div>
     </ng-template>
-    <div class="d-flex justify-content-center my-4">
+    <div
+      class="d-flex justify-content-center my-4"
+      *ngIf="pageSize < silabos.length"
+    >
       <ngb-pagination
         [(page)]="page"
         [pageSize]="pageSize"
