chore: fix typo

--- a/src/app/silabo/components/agregar-select-element/agregar-select-element.component.html
+++ b/src/app/silabo/components/agregar-select-element/agregar-select-element.component.html
@@ -39,7 +39,7 @@
       </table>
     </div>
     <small class="text-muted" *ngIf="valorId == 'docente_id'">
-      Se agregara como responsable del curso al primer elementO agregado
+      Se agregara como responsable del curso al primer elemento agregado
     </small>
   </div>
 </div>
