feat: Implement funcionality for Semana

--- a/src/app/silabo/components/agregar-semana/agregar-semana.component.html
+++ b/src/app/silabo/components/agregar-semana/agregar-semana.component.html
@@ -13,85 +13,55 @@
 <div class="modal-body">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 my-2">
         <label for="">Teoria</label>
-        <input type="text" class="form-control" name="" id="" ngbAutofocus />
+        <textarea
+          name=""
+          id=""
+          rows="3"
+          class="form-control"
+          [(ngModel)]="teoria"
+        ></textarea>
       </div>
-      <div class="col-12">
-        <label for="">Laboratirio</label>
-        <input type="text" class="form-control" name="" id="" />
+      <div class="col-12 my-2">
+        <label for="">Laboratorio</label>
+        <textarea
+          name=""
+          id=""
+          rows="3"
+          class="form-control"
+          [(ngModel)]="laboratorio"
+        ></textarea>
       </div>
-      <div class="col-12">Actividades asincronicas</div>
-      <div class="col-12">
-        <label for="">Actividades</label>
-        <input type="text" class="form-control" name="" id="" />
-        <button class="btn btn-dark">Agregar</button>
-      </div>
-      <div class="col-12 card">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-        tempora unde autem, laboriosam aut alias. Vitae, minima perferendis
-        maxime in blanditiis error inventore laboriosam aspernatur soluta beatae
-        quaerat neque tenetur.
-      </div>
-      <div class="col-12">
-        <label for="">Recursos</label>
-        <input type="text" class="form-control" name="" id="" />
-        <button class="btn btn-dark">Agregar</button>
-      </div>
-      <div class="col-12 card">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-        tempora unde autem, laboriosam aut alias. Vitae, minima perferendis
-        maxime in blanditiis error inventore laboriosam aspernatur soluta beatae
-        quaerat neque tenetur.
-      </div>
-      <div class="col-12">
-        <label for="">Estrategias</label>
-        <input type="text" class="form-control" name="" id="" />
-        <button class="btn btn-dark">Agregar</button>
-      </div>
-      <div class="col-12 card">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-        tempora unde autem, laboriosam aut alias. Vitae, minima perferendis
-        maxime in blanditiis error inventore laboriosam aspernatur soluta beatae
-        quaerat neque tenetur.
-      </div>
-      <div class="col-12">Actividades sincronicas</div>
-      <div class="col-12">
-        <label for="">Actividades</label>
-        <input type="text" class="form-control" name="" id="" />
-      </div>
-      <div class="col-12 card">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-        tempora unde autem, laboriosam aut alias. Vitae, minima perferendis
-        maxime in blanditiis error inventore laboriosam aspernatur soluta beatae
-        quaerat neque tenetur.
-      </div>
-      <div class="col-12">
-        <label for="">Recursos</label>
-        <input type="text" class="form-control" name="" id="" />
-        <button class="btn btn-dark">Agregar</button>
-      </div>
-      <div class="col-12 card">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-        tempora unde autem, laboriosam aut alias. Vitae, minima perferendis
-        maxime in blanditiis error inventore laboriosam aspernatur soluta beatae
-        quaerat neque tenetur.
-      </div>
-      <div class="col-12">
-        <label for="">Estrategias</label>
-        <input type="text" class="form-control" name="" id="" />
-        <button class="btn btn-dark">Agregar</button>
-      </div>
-      <div class="col-12 card">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-        tempora unde autem, laboriosam aut alias. Vitae, minima perferendis
-        maxime in blanditiis error inventore laboriosam aspernatur soluta beatae
-        quaerat neque tenetur.
-      </div>
+      <div class="col-12 my-2"><h4>Actividades asincronicas</h4></div>
+      <hr />
+      <app-agregar-elemento-card
+        etiqueta="Actividades"
+      ></app-agregar-elemento-card>
+      <app-agregar-elemento-card
+        etiqueta="Recursos"
+      ></app-agregar-elemento-card>
+      <app-agregar-elemento-card
+        etiqueta="Estrategias"
+      ></app-agregar-elemento-card>
+
+      <div class="col-12 my-2"><h4>Actividades sincronicas</h4></div>
+      <hr />
+      <app-agregar-elemento-card
+        etiqueta="Actividades"
+      ></app-agregar-elemento-card>
+      <app-agregar-elemento-card
+        etiqueta="Recursos"
+      ></app-agregar-elemento-card>
+      <app-agregar-elemento-card
+        etiqueta="Estrategias"
+      ></app-agregar-elemento-card>
     </div>
   </div>
 </div>
 
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary">Agregar</button>
+  <button type="button" class="btn btn-primary" (click)="agregarSemana()">
+    Agregar
+  </button>
 </div>
