--- a/src/app/silabo/components/reference/reference.component.html
+++ b/src/app/silabo/components/reference/reference.component.html
@@ -81,6 +81,6 @@
 
 <div class="modal-footer">
   <button type="button" class="btn btn-primary" (click)="saveReference()">
-    Guardar
+    Agregar
   </button>
 </div>
